--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ header {
 
 
 #first_screen {
-    
+    height: 100%;
    background-image: url(img/backone1920.jpg); 
    background-position: top center;
    background-repeat: no-repeat;
