--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 header {
  display: block; 
- height: 100%; 
+ height: 637px; 
 
 }
 
@@ -20,9 +20,7 @@ header {
    background-position: top center;
    background-repeat: no-repeat;
    background-attachment: scroll;
-   
-
-   
+     
 }
 
 
@@ -506,5 +504,5 @@ cart.init("basketwidjet", config);
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.css">
 	
